# HW13_1

./: .gitignore  class.py  pyproject.toml
cl/: CategoryIterator.py  category.py  order.py  product.py
less/: less15.2.2.py  less15.2.3.py  less15.2.py
src/: less15.1.py  main.py
tests/: test_class.py
utils/: hw_class.py  load_json.py
