[tool.poetry]
name = "hw13-1"
version = "0.1.0"
description = ""
authors = ["mer1d1an <nikita.sh@gklifts.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
